--- a/krystle-app/src/App.css
+++ b/krystle-app/src/App.css
@@ -1,5 +1,11 @@
+
+
 .App {
   text-align: center;
+  text-decoration: underline;
+  background-color: #B3BF40;
+  border: 2px solid grey;
+
 }
 
 .App-logo {
@@ -7,32 +13,12 @@
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.nav navBar {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-between;
+  margin: 2%;
+  padding: 5px;
+ 
+
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
