--- a/krystle-app/src/index.css
+++ b/krystle-app/src/index.css
@@ -1,16 +1,129 @@
+@import url("https://fonts.googleapis.com/css2?family=Arimo&family=Roboto:wght@500&display=swap");
+
 body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-
+  font-family: "Arimo", sans-serif;
 }
 
-.pages{
+.pages {
   height: 80vh;
   width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
   color: black;
-  font-size: 35px;
+  font-size: 30px;
+}
+
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px 5%;
+  background-color: #d1efe4;
+}
+
+.bars-button {
+  display: none;
+}
+
+.logo {
+  color: #797474;
+  letter-spacing: 1px;
+  font-size: 25px;
+  font-weight: 500;
+}
+
+.links {
+  display: flex;
+  align-items: center;
+  gap: 30px;
+  color: #616161;
+}
+
+.links a {
+  text-decoration: none;
+  color: #414141;
+  letter-spacing: 1px;
+  font-weight: 400;
+  padding: 10px 20px;
+  position: relative;
+}
+
+.links a::after {
+  position: absolute;
+  content: "";
+  bottom: 5px;
+  left: 0;
+  right: 0;
+  width: 100%;
+  height: 2px;
+  background-color: #797474;
+  transition: all 0.8s ease;
+}
+.links a:hover {
+  color: #fff;
+  z-index: 1;
+  transition: all 0.8s ease;
+}
+
+.links a:hover::after {
+  height: 80%;
+  z-index: -1;
+}
+
+@media only screen and (max-width: 980px) {
+  .navbar {
+    padding: 25px 3%;
+  }
+  .links a {
+    font-size: 16px;
+  }
+}
+@media only screen and (max-width: 768px) {
+  .links {
+    display: none;
+  }
+  .links.active {
+    display: flex;
+    flex-direction: column;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: #797474;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .bars-button {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    width: 50px;
+    height: 40px;
+    z-index: 4;
+    position: relative;
+  }
+
+  .bars-button span {
+    background-color: #fff;
+    width: 100%;
+    height: 2px;
+    transition: all 0.3s ease;
+  }
+  .bars-button.active span:nth-child(2) {
+    display: none;
+  }
+  .bars-button.active span:nth-child(1) {
+    position: absolute;
+    transform: rotate(-45deg);
+  }
+  .bars-button.active span:nth-child(3) {
+    position: absolute;
+    transform: rotate(45deg);
+  }
 }
