--- a/krystle-app/src/App.css
+++ b/krystle-app/src/App.css
@@ -13,4 +13,17 @@
   pointer-events: none;
 }
 
+.contact {
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+margin: 5px 2px 2px;
+padding: 4%;
+}
+
+button {
+  align-items: center;
+}
+
 
