--- a/krystle-app/src/index.css
+++ b/krystle-app/src/index.css
@@ -5,6 +5,7 @@ body {
   padding: 0;
   box-sizing: border-box;
   font-family: "Arimo", sans-serif;
+  background-color: ivory;
 }
 
 .pages {
@@ -15,6 +16,7 @@ body {
   align-items: center;
   color: black;
   font-size: 30px;
+  background-color: ivory;
 }
 
 .navbar {
@@ -22,7 +24,7 @@ body {
   justify-content: space-between;
   align-items: center;
   padding: 20px 5%;
-  background-color: #d1efe4;
+  background-color: #609179;
 }
 
 .bars-button {
@@ -30,7 +32,7 @@ body {
 }
 
 .logo {
-  color: #797474;
+  color: #fff;
   letter-spacing: 1px;
   font-size: 25px;
   font-weight: 500;
@@ -45,7 +47,7 @@ body {
 
 .links a {
   text-decoration: none;
-  color: #414141;
+  color: #fff;
   letter-spacing: 1px;
   font-weight: 400;
   padding: 10px 20px;
@@ -60,7 +62,7 @@ body {
   right: 0;
   width: 100%;
   height: 2px;
-  background-color: #797474;
+  background-color: #616161;
   transition: all 0.8s ease;
 }
 .links a:hover {
@@ -94,7 +96,7 @@ body {
     left: 0;
     width: 100%;
     height: 100vh;
-    background-color: #797474;
+    background-color: #609179;
     align-items: center;
     justify-content: center;
   }
