--- a/krystle-app/src/App.css
+++ b/krystle-app/src/App.css
@@ -1,11 +1,10 @@
 
-
 .App {
   text-align: center;
   text-decoration: underline;
-  background-color: #B3BF40;
+  background-color: #b3bf40;
   border: 2px solid grey;
-
+ 
 }
 
 .App-logo {
@@ -13,17 +12,44 @@
   pointer-events: none;
 }
 
-.contact {
-display: flex;
-flex-direction: column;
-justify-content: center;
-align-items: center;
-margin: 5px 2px 2px;
-padding: 4%;
+  .contact form{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 50px;
+    height: 90vh;
+    border: 4px solid #609179;
+   
+  }
+
+input {
+ height: 40px;
+ line-height: 1.5em;
+ border: 4px solid #609179;
+ 
 }
 
-button {
-  align-items: center;
-}
+  
+
+  .label {
+    float: center;
+    text-align: left;
+    align-items: center;
+    margin: 10px;
+    margin-right: 60px;
+    width: 100px;
+    padding: 4%;
+  }
+
+  textarea{
+    border: 4px solid #609179;
+    height: auto;
+  }
+  
+  textarea:focus, input:focus{
+    border: 4px solid #FF0000;
+  }
+
 
 
