Contact Form complete

--- a/krystle-app/src/index.css
+++ b/krystle-app/src/index.css
@@ -1,13 +1,21 @@
 @import url("https://fonts.googleapis.com/css2?family=Arimo&family=Roboto:wght@500&display=swap");
 
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+
+}
+
 body {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
   font-family: "Arimo", sans-serif;
-  background-color: ivory;
+  background-color: #F6F8E8;
   font-size: 2rem;
   text-align: center;
+  
+
 }
 
 .pages {
@@ -19,6 +27,8 @@ body {
   color: black;
   font-size: 30px;
   background-color: ivory;
+  box-sizing: border-box;
+  padding: 20px;
 }
 
 .navbar {
