--- a/krystle-app/src/App.css
+++ b/krystle-app/src/App.css
@@ -1,10 +1,8 @@
-
 .App {
   text-align: center;
   text-decoration: underline;
   background-color: #b3bf40;
   border: 2px solid grey;
- 
 }
 
 .App-logo {
@@ -12,44 +10,47 @@
   pointer-events: none;
 }
 
-  .contact form{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin: 50px;
-    height: 90vh;
-    border: 4px solid #609179;
-   
-  }
-
-input {
- height: 40px;
- line-height: 1.5em;
- border: 4px solid #609179;
- 
+.contact {
+  min-width: 100%;
+  height: 100vh;
+  /* border: dotted #f55a00 5vw; */
+  margin: 0vw;
+  padding: 5vw;
+  position: relative;
 }
 
-  
+.contact form {
+  display: block;
+  text-align: center;
+  font-size: 20px;
+  margin: 15%;
+  padding: 60px;
+  border: 14px solid  #FED9C9;
+}
 
-  .label {
-    float: center;
-    text-align: left;
-    align-items: center;
-    margin: 10px;
-    margin-right: 60px;
-    width: 100px;
-    padding: 4%;
-  }
+.contact input,
+textarea {
+  display: block;
+  width: 100%;
+  padding: 0.5rem 0.8rem 0.5rem 0.8rem;
+  margin: 0.9vw 0;
+  border: 2px solid #C1E1D2;
+  border-radius: 5px;
+  font-size: 20px;
+}
 
-  textarea{
-    border: 4px solid #609179;
-    height: auto;
-  }
-  
-  textarea:focus, input:focus{
-    border: 4px solid #FF0000;
-  }
+.contact textarea {
+  height: 15vh;
+}
 
+button {
+ display: block;
+ width: 100%;
+ padding: 14px 28px;
+ font-size: 16px;
+ background-color: #FEC994;
+ cursor: pointer;
+ text-align: center;
 
-
+ 
+}
